# gasnotes-simulator

./: .dockerignore  .gitignore  .prettierrc  Dockerfile  Pipfile  README.md  bun.lockb  compose.base.yaml  compose.dev.yaml  compose.test.yaml  docker-compose.yaml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  sim.py  sim_cleaner.py
app/: .dockerignore  Dockerfile  pyproject.toml  sim.py  start-headed-tests.sh  wsgi.py
app/lib/: custom_jinja_tools.py  custom_webassets_filters.py  model.py  radiology_tools.py  room_helpers.py  state.py  types.py
app/static/: main.css  sim.css
app/static/esbuild/: primary.js  secondary.js  tertiary.js
app/static/imaging/: data_cxr.json
app/static/js/: audio.js  controller.js  investigations.js  monitor.js  nibp.js  sockets.js  starfield.js  sync.js  utils.js  walkietalkie.js  wavemaker.js  wavemaker2.js
app/templates/: abg_machine.html  about.html  base.html  connect.html  controller.html  error.html  header.html  homepage.html  join.html  mega-title.html  monitor.html  page.html  rx.html  sim_index.html  starfield.js  tx.html  wavedesign.html  wavetest.html  wt.html  wt_demo.html
app/templates/components/: abg_machine.html  connection_modal.html  header.html  mega-title.html
app/templates/layouts/: base.html  sim_layout.html
app/templates/pages/: error.html  homepage.html  wavedesign.html
app/templates/sim_views/: sim_connect.html  sim_controller.html  sim_index.html  (+1 more)
app/tests/: conftest.py  test_browser_rendering.py  test_in_vitro.py  test_in_vivo.py  test_rate_limit.py  test_routes.py
(+57 files in other folders)
