[project]
name = "gasnotes-simulator"
version = "0.1.0"
description = "A remote-controlled bedside monitor to help you run medical simulations."
readme = "README.md"
requires-python = ">=3.14.0"
dependencies = [
    "bs4>=0.0.2",
    "flask>=3.1.3",
    "flask-assets>=2.1.0",
    "flask-caching>=2.3.1",
    "flask-limiter>=4.1.1",
    "flask-minify>=0.50",
    "flask-socketio>=5.5.1",
    "gevent>=25.9.1",
    "gunicorn>=23.0.0",
    "lxml>=6.0.2",
    "playwright>=1.58.0",
    "pytest>=9.0.2",
    "pytest-playwright>=0.7.2",
    "pytest-xdist>=3.8.0",
    "segno>=1.6.6",
]

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
]
